created playlist endpoints
